# DropSync

./: .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  INSTALL.md  INTEGRATIONS.md  LICENSE  Makefile  README.md  RELEASE_TEMPLATE.md  RULES.md  SECURITY.md  SPEC.md  UNINSTALL.md  USAGE.md  pyproject.toml  pyproject.toml.bak  questions.md
.github/workflows/: ci.yml
dropsync/: __init__.py  cli.py  config.py  dbus_service.py  processors.py  rules.py  server.py  utils.py
dropsync/webui/: capture.css  capture.html  capture.js
examples/: bookmarklet.txt  gnome_gdbus.sh  hyprland.conf.snip  kde_gdbus.sh  niri.conf.snip  rules.toml
scripts/: bootstrap_github.sh  install_arch.sh  install_debian.sh  install_macos.sh
systemd/: dropsync-organize.service  dropsync-organize.timer  dropsync.service
tests/: test_config.py  test_processors.py  test_rules.py  test_server.py  test_utils.py
