[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "dropsync"
version = "0.1.0"
description = "DropSync — capture → enrich → sync companion for Syncthing"
readme = "README.md"
authors = [{ name = "W. Appleton", email = "will@accelerated.industries" }]
license = { text = "BSD-2-Clause" }
requires-python = ">=3.11"
keywords = ["syncthing", "bookmark", "capture", "offline", "monolith", "yt-dlp", "gallery-dl", "readability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  # IMPORTANT: PyPI tops out at 0.2.3 right now
  "dbus-next>=0.2.3,<0.3",
   "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.4",
  "mypy>=1.10",
  "pytest>=8.2",
]

[project.scripts]
dropsync = "dropsync.cli:app"
dropsyncd = "dropsync.cli:run_daemon"

[project.urls]
Homepage = "https://github.com/WilliamAppleton/DropSync"
Repository = "https://github.com/WilliamAppleton/DropSync.git"
Issues = "https://github.com/WilliamAppleton/DropSync/issues"
Changelog = "https://github.com/WilliamAppleton/DropSync/blob/main/CHANGELOG.md"

# --- Hatch build config ---
# Ensure non-Python assets (web UI, systemd units, examples) are actually shipped
[tool.hatch.build]
# By default hatch packs your Python packages; these globs add extra assets to the sdist.
include = [
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "systemd/**",
  "examples/**",
  "scripts/**",
  "dropsync/webui/**",
]

[tool.hatch.build.targets.wheel]
packages = ["dropsync"]
# Force-include extra data in the wheel so pipx installs have them too.
# (These paths are relative to the project root)
[tool.hatch.build.targets.wheel.force-include]
"systemd" = "systemd"
"examples" = "examples"
"dropsync/webui" = "dropsync/webui"

# Optional: keep tooling happy
[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

